--- a/biostatistics.html
+++ b/biostatistics.html
@@ -143,7 +143,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -293,11 +293,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premier-research/job/oUrAafwP'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oUrAafwP'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://icrw.applicantstack.com/x/detail/a25z2g1385z8'>Biostatistician Consultant</a></h5> 
+<h5><a href='http://icrw.applicantstack.com/x/detail/a25z2g1385z8'>Biostatistician Consultant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... All three evaluations are longitudinal cohort cluster designs with baseline, 
 midline and endline quantitative data collection points. The primary outcomes of
@@ -327,7 +327,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">South San Francisco, CA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/biomedical-statistics-consultant-aPz8ggZ0Kr6BMMaKiznY58'>Biomedical Statistics Consultant #0113 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -347,7 +347,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='http://blueprintmedicine.applytojob.com/apply/bbvBxeNPMM/Senior-Manager-Biostatistics'>Senior Manager, Biostatistics - Blueprint Medicines - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://blueprintmedicine.applytojob.com/apply/bbvBxeNPMM/Senior-Manager-Biostatistics'>Senior Manager, Biostatistics - Blueprint Medicines - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -363,7 +363,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oZUo9fwa&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nyTusLwD'>Premier Research Careers - Manager, Biostatistics (US Based)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oZUo9fwa&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nyTusLwD'>Premier Research Careers - Manager, Biostatistics (US Based)</a></h5> 
 <p><span class="badge badge-light">North Carolina  Boston, Massachusetts  Chicago, Illinois  Denver Phoenix, Arizona  San Diego, California  San Francisco, California  Seattle, Washington  Salt Lake City, Utah  Austin, Texas  Naperville, Illinois  Baltimore, Maryland  Nashville, Tennessee</span></p>
 <p>Posted on:: 2019-08-30</p>
 <hr/>
@@ -404,7 +404,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
+<h5><a href='https://agn.referrals.selectminds.com/jobs/assoc-dir-biostatistics-9737'>Assoc Dir, Biostatistics - Allergan Careers</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
@@ -416,7 +416,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-08-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-contract-30545'>Principal Biostatistician (Contract) - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-contract-30545'>Principal Biostatistician (Contract) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
@@ -424,7 +424,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54099/principal-biostatistician/job'>Principal Biostatistician in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 8, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
@@ -476,7 +476,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p>Jul 21, 2019 ... JAX was voted among the top 15 ?Best Places to Work in Academia? in the United 
 States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-01</p>
 <hr/>
