--- a/statistics.html
+++ b/statistics.html
@@ -195,7 +195,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.welovegolang.com/jobs/back-end-software-engineer-5768301728759808'>Back-End software Engineer at Office for National Statistics - We Love Go</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -270,7 +270,7 @@ generate?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/jobs/1152500'>Statistical Programmer - Statistics & Data Corporation (SDC)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Produce statistical analyses, including generating analysis datasets, tables, 
 listings, and figures for clinical trials. Support Data Management in data set?...</p>
@@ -289,7 +289,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://deltacollege.referrals.selectminds.com/jobs/adjunct-instructor-psychology-statistics-186'>Adjunct Instructor- Psychology  (Statistics) - San Joaquin Delta College Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deltacollege.referrals.selectminds.com/jobs/adjunct-instructor-psychology-statistics-186'>Adjunct Instructor- Psychology  (Statistics) - San Joaquin Delta College Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -301,7 +301,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Chicago Rockford  Chicago</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
+<h5><a href='https://recruit.ap.uci.edu/JPF05335'>Tenure-Track/Tenured Faculty Position - Statistics (JPF05335) - UCI - Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -389,7 +389,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/42D2A18D41'>TFS - Jobs: Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -405,7 +405,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/financial-statistics-analyst-i-10141'>Financial Statistics Analyst I - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/financial-statistics-analyst-i-10141'>Financial Statistics Analyst I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Washington, D.C.</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -451,7 +451,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qpHaVfwV&k=Job&j=oMoaafwe&__jvst=Employee&__jvsd=sXuXJhwT&__jvsc=Twitter&bid=ntzL2Mw6'>Suzy Careers - Computational Statistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qpHaVfwV&k=Job&j=oMoaafwe&__jvst=Employee&__jvsd=sXuXJhwT&__jvsc=Twitter&bid=ntzL2Mw6'>Suzy Careers - Computational Statistician</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
@@ -471,7 +471,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
+<h5><a href='https://jobs.amstat.org/jobs/12797743/two-tenure-track-positions-in-statistics-assistant-or-associate-level'>Two Tenure-track Positions in Statistics (Assistant or Associate level), Employment | AMSTAT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
