--- a/internship.html
+++ b/internship.html
@@ -41,8 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/1928312'>Job Application for Human Resources Intern at General Assembly</a></h5> 
+<p><span class="badge badge-light">New York City  New York</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.crelate.com/portal/harrisonrush/job/shmiex6gtfxb849t9b7pxib9ar'>Senior Vice President/ Director - Internet, Fin Tech, Software  | The Harrison Rush Group</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://lockton.referrals.selectminds.com/jobs/intern-1898'>Intern - Lockton Careers</a></h5> 
@@ -219,7 +223,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576444-internship-assistant-concept-marketing-benelux-fr'>Bosch Group Internship Assistant Concept Marketing BeNeLux FR | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698576444-internship-assistant-concept-marketing-benelux-fr'>Bosch Group Internship Assistant Concept Marketing BeNeLux FR | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -227,7 +231,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698573643-internship-assistant-trade-marketing-channel-marketing-communication-en'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication EN | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698573643-internship-assistant-trade-marketing-channel-marketing-communication-en'>Bosch Group Internship Assistant Trade Marketing, Channel Marketing & Communication EN | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -275,11 +279,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/uniphore/8eecc0f6-9717-4df0-a8ed-d943ce9bf4c3'>Uniphore - Business Analyst, Product Engineering Program Management (Internship)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/uniphore/8eecc0f6-9717-4df0-a8ed-d943ce9bf4c3'>Uniphore - Business Analyst, Product Engineering Program Management (Internship)</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=721A83367.0'>
+<h5><a href='https://www.applythis.net/job/?a=721A83367.0'>
 	
     Apply for Systems Development Manager -  Bolton, United Kingdom - IT and Internet - Syst-Fpukle-Laura - Find a job, build a career
 
@@ -327,7 +331,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558422-revenue-management-pricing-intern-6-months-'>BlaBlaCar Revenue Management & Pricing Intern (6 months) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999698558422-revenue-management-pricing-intern-6-months-'>BlaBlaCar Revenue Management & Pricing Intern (6 months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -343,7 +347,7 @@
 <p><span class="badge badge-light">Naperville, Illinois United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-summer-intern-network-state-36970'>Bell Labs Summer Intern - Network State - Nokia Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-summer-intern-network-state-36970'>Bell Labs Summer Intern - Network State - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -387,7 +391,7 @@
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698551269-internship-in-the-fields-manufacturing-and-production-planning'>Bosch Group Internship in the fields Manufacturing and Production planning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698551269-internship-in-the-fields-manufacturing-and-production-planning'>Bosch Group Internship in the fields Manufacturing and Production planning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -407,7 +411,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://goldcorp.referrals.selectminds.com/jobs/intern-digital-communications-2102'>Intern, Digital Communications - Goldcorp Careers</a></h5> 
+<h5><a href='https://goldcorp.referrals.selectminds.com/jobs/intern-digital-communications-2102'>Intern, Digital Communications - Goldcorp Careers</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -459,10 +463,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698545130-pim-internship'>Traveloka PIM Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Thailand  Jakarta, Indonesia</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20166'>Corporate Intern - Gallagher Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
